<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <EditText
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/texto_1"
        android:importantForAutofill="no"
        android:textStyle="bold"
        android:textSize="45sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/texto_2"
        android:importantForAutofill="no"
        android:textStyle="bold"
        android:textSize="45sp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/boton_comparar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comparar"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>